fix scrollbar bug

--- a/css/nth-tabs.css
+++ b/css/nth-tabs.css
@@ -37,18 +37,26 @@
 	-webkit-transition: margin-left 1s;
 	-o-transition: margin-left 1s;
 }
-
-
+.tab-content{
+	overflow: auto;
+}
 .nth-tabs,.tab-content,.tab-pane{
 	height: 100%;
+	/*height: calc(100% - 42px);*/
 }
-
-.nth-tabs-frame {
+.nth-tabs-content{
 	width:100%;
 	height: calc(100% - 42px);
 	position: relative;
 	overflow-x: hidden;
 }
+.nth-tabs-frame{
+	width:100%;
+	height: calc(100% - 42px);
+	position: relative;
+	overflow-x: hidden;
+}
+
 
 /*选项卡操作相关*/
 .nth-tabs .roll-nav {
